add role and permission
